<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My App Portfolio</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="my_own_app_button_prompt">CAPSTONE: MY OWN APP</string>
    <string name="spotify_app_button_prompt">SPOTIFY STREAMER</string>
    <string name="library_app_button_prompt">LIBRARY APP</string>
    <string name="scores_app_button_prompt">SCORES APP</string>
    <string name="build_bigger_app_button_prompt">BUILD IT BIGGER</string>
    <string name="reader_app_button_prompt">XYZ READER</string>
</resources>
