<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#BBDEFB">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="My Nanodegree Apps!"
        android:id="@+id/header_text"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="false"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textColor="@color/text_color" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header_text"
        android:id="@+id/buttons_layout"
        android:longClickable="false"
        android:baselineAligned="false"
        android:layout_margin="30dp"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:layout_alignParentBottom="false"
        android:layout_alignWithParentIfMissing="false">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/spotify_app_button_prompt"
            android:id="@+id/spotify_app_button"
            android:textColor="@color/text_color"
            android:background="@color/button_color"
            android:textAlignment="center"
            android:onClick="displayButtonPurpose" />

        <Space
            android:layout_width="20dp"
            android:layout_height="20dp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scores_app_button"
            android:textColor="@color/text_color"
            android:background="@color/button_color"
            android:textAlignment="center"
            android:text="@string/scores_app_button_prompt"
            android:onClick="displayButtonPurpose" />

        <Space
            android:layout_width="20dp"
            android:layout_height="20dp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/library_app_button_prompt"
            android:id="@+id/libary_app_button"
            android:textColor="@color/text_color"
            android:background="@color/button_color"
            android:textAlignment="center"
            android:onClick="displayButtonPurpose" />

        <Space
            android:layout_width="20dp"
            android:layout_height="20dp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/build_bigger_app_button_prompt"
            android:id="@+id/build_bigger_app_button"
            android:textColor="@color/text_color"
            android:background="@color/button_color"
            android:textAlignment="center"
            android:onClick="displayButtonPurpose" />

        <Space
            android:layout_width="20dp"
            android:layout_height="20dp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/reader_app_button_prompt"
            android:id="@+id/reader_app_button"
            android:textColor="@color/text_color"
            android:background="@color/button_color"
            android:textAlignment="center"
            android:onClick="displayButtonPurpose" />

        <Space
            android:layout_width="20dp"
            android:layout_height="20dp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_own_app_button_prompt"
            android:id="@+id/my_own_app_button"
            android:textColor="@color/text_color"
            android:background="@color/my_own_app_button_color"
            android:textAlignment="center"
            android:onClick="displayButtonPurpose" />
    </LinearLayout>
</RelativeLayout>
